objects/WAM_CustomSetting__c/WAM_CustomSetting__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>WAMCRM: custom Settings</description>
    <label>WAM_CustomSetting</label>
</CustomObject>