objects/WAM_CustomSetting__c/fields/Account_Distributor_Record_Type_Label__c.field-meta.xml
<CustomField>
    <fullName>Account_Distributor_Record_Type_Label__c</fullName>
    <label>Account Distributor Record Type Label</label>
    <length>100</length>
    <type>Text</type>
</CustomField>