objects/WAM_CustomSetting__c/fields/AUM_in_Manulife_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>AUM_in_Manulife_Record_Type__c</fullName>
    <description>WAMCRM : AUM in Manulife Record Type</description>
    <inlineHelpText>WAMCRM : AUM in Manulife Record Type</inlineHelpText>
    <label>AUM in Manulife Record Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>