objects/WAM_CustomSetting__c/fields/Contact_Distributor_Record_Type_Label__c.field-meta.xml
<CustomField>
    <fullName>Contact_Distributor_Record_Type_Label__c</fullName>
    <description>WAMCRM : Contact Distributor Record Type Label</description>
    <inlineHelpText>WAMCRM : Contact Distributor Record Type Label</inlineHelpText>
    <label>Contact Distributor Record Type Label</label>
    <length>100</length>
    <type>Text</type>
</CustomField>