objects/WAM_CustomSetting__c/fields/Contact_Distributor_Record_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Distributor_Record_Type_Name__c</fullName>
    <description>WAMCRM : Contact Distributor Record Type Name</description>
    <inlineHelpText>WAMCRM : Contact Distributor Record Type Name</inlineHelpText>
    <label>Contact Distributor Record Type Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>