objects/WAM_CustomSetting__c/fields/Contact_Purpose_Record_Type_Label__c.field-meta.xml
<CustomField>
    <fullName>Contact_Purpose_Record_Type_Label__c</fullName>
    <label>Contact Purpose Record Type Label</label>
    <length>100</length>
    <type>Text</type>
</CustomField>