objects/WAM_CustomSetting__c/fields/Default_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Default_Country_Code__c</fullName>
    <description>WAMCRM: Default country code</description>
    <inlineHelpText>WAMCRM: Default country code</inlineHelpText>
    <label>Default Country Code</label>
    <length>6</length>
    <required>true</required>
    <type>Text</type>
</CustomField>