objects/WAM_CustomSetting__c/fields/Distributor_Sales_Info_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Sales_Info_Record_Type__c</fullName>
    <description>WAMCRM : Distributor Sales InformationRecord Type</description>
    <inlineHelpText>WAMCRM : Distributor Sales InformationRecord Type</inlineHelpText>
    <label>Distributor Sales Info Record Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>