objects/WAM_CustomSetting__c/fields/Event_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Record_Type__c</fullName>
    <description>WAMCRM : Event Record Type used to manage distributors</description>
    <inlineHelpText>WAMCRM : Event Record Type used to manage distributors</inlineHelpText>
    <label>Event Record Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>