objects/WAM_CustomSetting__c/fields/Fund_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Fund_Record_Type__c</fullName>
    <description>WAMCRM : Fund Record Type to distinguish WAM funds</description>
    <inlineHelpText>WAMCRM : Fund Record Type to distinguish WAM funds</inlineHelpText>
    <label>Fund Record Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>