objects/WAM_CustomSetting__c/fields/Opportunity_Distributor_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Distributor_Record_Type__c</fullName>
    <description>WAMCRM : Opportunity Distributor Record Type</description>
    <inlineHelpText>WAMCRM : Opportunity Distributor Record Type</inlineHelpText>
    <label>Opportunity Distributor Record Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>