objects/WAM_CustomSetting__c/fields/Task_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Task_Record_Type__c</fullName>
    <description>WAMCRM : Task Record Type to manage distributors</description>
    <inlineHelpText>WAMCRM : Task Record Type to manage distributors</inlineHelpText>
    <label>Task Record Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>